--- a/css/layout.css
+++ b/css/layout.css
@@ -38,12 +38,12 @@
 .col-4 {
   width: 31%;
   float: left;
-  margin: 0 18px 0 0;
+  margin-left: 2%;
 }
 
 #archive {
   width: 31%;
   float: right;
-  text-align: left
-  margin: 0 18px 0 0;
+  text-align: left;
+  margin-left: 2%;
 }
