automatically backed up by learn

--- a/css/layout.css
+++ b/css/layout.css
@@ -41,9 +41,12 @@
   margin-left: 2%;
 }
 
+[class*="col-"]:first-child {
+   margin-left: 0;
+ }
+
 #archive {
   width: 31%;
   float: right;
-  text-align: left;
   margin-left: 2%;
 }
