automatically backed up by learn

--- a/css/layout.css
+++ b/css/layout.css
@@ -23,19 +23,14 @@
 }
 
 /* Posititoning Classes */
+[class*="col-"] {
+    float: left;
+    margin-left: 2%;
+  }
 
+  [class*="col-"]:first-child {
+    margin-left: 0;
+  }
 
-.col-8{
-  width: 66%;
-  float: left;
-}
-
-.col-4 {
-  width: 32%;
-  float: left;
-  margin-left: 2%;
-}
-
-[class*="col-"]:first-child {
-   margin-left: 0;
- }
+  .col-4 { width: 32%; }
+  .col-8 { width: 66%; }
