--- a/css/layout.css
+++ b/css/layout.css
@@ -23,6 +23,12 @@
 }
 
 /* Posititoning Classes */
+
+.row {
+   clear: both;
+   margin-bottom: 2%;
+ }
+ 
 [class*="col-"] {
     float: left;
     margin-left: 2%;
