--- a/css/layout.css
+++ b/css/layout.css
@@ -9,27 +9,23 @@
   -moz-box-sizing: border-box;
 }
 
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
-}
-
-.clear {
-  clear: both;
-}
-
 /* Posititoning Classes */
 
-.row {
-   clear: both;
-   margin-bottom: 2%;
- }
- 
-[class*="col-"] {
+  .row {
+    clear: both;
+    margin-bottom: 2%;
+  }
+
+  .row:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    line-height: 0;
+  }
+
+  [class*="col-"] {
     float: left;
     margin-left: 2%;
   }
